[gd_scene load_steps=6 format=3 uid="uid://8ywabljb86c2"]

[ext_resource type="FontFile" uid="uid://m2d4xiaewbai" path="res://assets/fonts/Space_Mono/SpaceMono-Bold.ttf" id="1_hlnxq"]
[ext_resource type="Script" path="res://scripts/upgrades/structure_hover_information.gd" id="1_r1t2t"]
[ext_resource type="Texture2D" uid="uid://sceauwt0f3qg" path="res://sprites/resistances/riot.png" id="2_6not1"]
[ext_resource type="FontFile" uid="uid://dj3n10i5rnycp" path="res://assets/fonts/Space_Mono/SpaceMono-Regular.ttf" id="3_bnpin"]
[ext_resource type="FontFile" uid="uid://b2f6jwq35rdba" path="res://assets/fonts/Space_Mono/SpaceMono-BoldItalic.ttf" id="4_ywnfg"]

[node name="StructureHoverInformation" type="Node2D"]
script = ExtResource("1_r1t2t")

[node name="Background" type="ColorRect" parent="."]
offset_left = -788.0
offset_top = -80.0
offset_bottom = 206.0
color = Color(0, 0, 0, 0.784314)

[node name="ColorRect" type="ColorRect" parent="."]
offset_left = -780.0
offset_top = -70.0
offset_right = -708.0
offset_bottom = 2.0
color = Color(1, 1, 1, 0.745098)

[node name="Owned" type="Label" parent="."]
offset_left = -698.0
offset_top = -30.0
offset_right = -430.0
offset_bottom = 3.0
theme_override_fonts/font = ExtResource("1_hlnxq")
theme_override_font_sizes/font_size = 22
text = "Owned:"

[node name="Value" type="Label" parent="Owned"]
layout_mode = 0
offset_left = 81.0
offset_right = 349.0
offset_bottom = 33.0
theme_override_fonts/font = ExtResource("1_hlnxq")
theme_override_font_sizes/font_size = 22
text = "6"

[node name="Name" type="Label" parent="."]
offset_left = -700.0
offset_top = -87.0
offset_right = -425.0
offset_bottom = 18.0
theme_override_fonts/font = ExtResource("1_hlnxq")
theme_override_font_sizes/font_size = 40
text = "Riot"

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-744, -34)
scale = Vector2(0.0651939, 0.0651939)
texture = ExtResource("2_6not1")

[node name="Cost" type="Label" parent="."]
offset_left = -335.0
offset_top = -68.0
offset_right = -17.0
offset_bottom = -8.0
theme_override_fonts/font = ExtResource("3_bnpin")
theme_override_font_sizes/font_size = 40
text = "15 RP"
horizontal_alignment = 2

[node name="Description" type="Label" parent="."]
offset_left = -763.0
offset_top = 10.0
offset_right = -17.0
offset_bottom = 83.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_ywnfg")
theme_override_font_sizes/font_size = 22
text = "A riot in support of the resistance"
autowrap_mode = 3

[node name="IndividualRate" type="Label" parent="."]
offset_left = -763.0
offset_top = 83.0
offset_right = -17.0
offset_bottom = 118.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_bnpin")
theme_override_font_sizes/font_size = 22
text = "- Each riot produces 0.1RP per second"
autowrap_mode = 3

[node name="TotalRate" type="Label" parent="."]
offset_left = -763.0
offset_top = 118.0
offset_right = -17.0
offset_bottom = 153.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_bnpin")
theme_override_font_sizes/font_size = 22
text = "- 6 Riots producing 0.6RP per second"
autowrap_mode = 3

[node name="TotalProduction" type="Label" parent="."]
offset_left = -763.0
offset_top = 153.0
offset_right = -17.0
offset_bottom = 188.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_bnpin")
theme_override_font_sizes/font_size = 22
text = "- 65 RP produced so far"
autowrap_mode = 3
